# sync-ai-coding-instructions

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  muff.toml  pyproject.toml  requirements.dev  tox.ini
sync_ai_coding_instructions/: main.py
tests/: test_main.py
